Changelog of Jail

1.1.5 - 31/JUL/2017
- Fixed language initialization error of missing file (Critical fix)
- Fixed "listener.player.not.allowed.leave" message being overlapped
- Animated the emoji of the prisoner UI when Bail is disabled

1.1.4 - 30/JUL/2017
- Updated API version, compatible with the current latest PocketMine software
- Fixed old configuration files being deleted when server restarts
- Fixed configuration updater not working perfectly upon plugin installation
- Fixed errors popping out upon mine set and player quit
- Fixed all cmds & tasks having wrong declaration due to updated PM API
- Improved stability of version update checker
- A more professional look of the README file :D

1.1.3 - 19/JUL/2017
- Updated Russian language file

1.1.2 - 07/MAY/2017
- Removed auto installer due to its violation of Poggit's submission rules.
- Added support for checking latest version from Poggit's repository.
- Fixed console spamming when PlayerMoveEvent is called.
- Fixed game mode not being set correctly when prisoners join the server.

1.1.1 - 06/MAY/2017
- Changed the way time data is updated and processed every second, reduces lags

1.0.2
- Fixed prisoners able to break blocks when mine is set in that jail #22
- Russian is now fully translated. #23

1.0.1- 19/MAR/2017
- Prisoners in deleted jails are now assigned automatically to random jails #21
- Offline unjailed players are now teleported back to spawn when they join #20
- Offline unjailed players' inventory and game mode are now recovered upon rejoining #20
- SellHand signs now show money-per-block to prisoner
- Added permission node 'jail.showInOutMessage' (detail pls refer to Jail's Wiki)
- Notification now shows upon entering/leaving a jail's 3D area
- Fixed incorrect message output of '/jailmine set' command
- Fixed configuration file updater malfunction

1.0.0 - 04/MAR/2017
- Added informational commands for admins to obtain data from the plugin