@@ -4,6 +4,7 @@ Changelog of Jail
 - Fixed language initialization error of missing file (Critical fix)
 - Fixed "listener.player.not.allowed.leave" message being overlapped
 - Animated the emoji of the prisoner UI when Bail is disabled
+- Added 'allow-visit' option, allows/disallow players to visit jails
 
 1.1.4 - 30/JUL/2017
 - Updated API version, compatible with the current latest PocketMine software
